# Dcode

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/agent/: pyproject.toml
apps/agent/src/dcode_agent/: __init__.py  graph.py  groundedness.py  main.py  settings.py  sse.py  state.py
apps/agent/src/dcode_agent/tools/: __init__.py  base.py  common.py  find_definition.py  find_references.py  get_dependencies.py  get_file_outline.py  grep.py  list_directory.py  read_file.py  search_code.py
apps/agent/tests/: test_graph.py  test_groundedness.py  test_query_sse.py  test_tools_execute.py  test_tools_registry.py
apps/api/: pyproject.toml
apps/api/src/dcode_api/: __init__.py  deps.py  errors.py  main.py  settings.py
apps/api/src/dcode_api/routes/: internal.py  query.py  repos.py
apps/api/tests/: test_health.py  test_internal_routes.py  test_internal_validation.py  test_query_route.py
apps/api/tests/fixtures/: requests_query_cases.json
apps/embedding/: pyproject.toml
apps/embedding/src/dcode_embedding/: __init__.py  main.py
apps/eval/: pyproject.toml
apps/eval/src/dcode_eval/: __init__.py  run.py  settings.py  smoke.py
apps/eval/src/dcode_eval/baselines/: __init__.py  base.py  bm25.py  common.py  full_system.py  github_search.py  hybrid_rag.py  vanilla_rag.py
apps/eval/src/dcode_eval/metrics/: __init__.py  groundedness.py  judge.py  retrieval.py
apps/eval/src/dcode_eval/questions/: README.md  __init__.py  loader.py  models.py
apps/eval/src/dcode_eval/questions/data/: questions.jsonl
apps/eval/tests/: test_baselines.py  test_metrics_skeleton.py  test_questions_dataset.py  test_run.py
apps/frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx
apps/frontend/src/api/: client.ts  types.ts
apps/frontend/src/components/: RepoStatusBadge.tsx
apps/frontend/src/demo/: evalSnapshot.ts
apps/frontend/src/lib/: recentRepos.ts
apps/frontend/src/pages/: ComparePage.tsx  IndexPage.tsx  QueryPage.tsx
apps/frontend/tests/: App.test.tsx  ComparePage.test.tsx  IndexPage.test.tsx  QueryPage.test.tsx  streamQuery.test.ts
apps/worker/: pyproject.toml
apps/worker/src/dcode_worker/: __init__.py  context.py  main.py  models.py  pipeline.py  settings.py
apps/worker/src/dcode_worker/stages/: __init__.py  chunk.py  clone.py  embed.py  graph.py  parse.py
apps/worker/tests/: test_clone_parse_chunk.py  test_embed_stage.py  test_graph_stage.py  test_pipeline_skeleton.py
docs/: DESIGN.md  Dcode-技术设计文档.md  Dcode-项目愿景与目标定义.md  Dcode-项目方案.md  Kick_off.md  PLAN.md  Structure.md  TODO.md  final_report.md  h1_decision.md  roadmap.md
docs/archive/: Kick_off.md  roadmap.md
infra/docker/: agent.Dockerfile  api.Dockerfile  embedding.Dockerfile  frontend.Dockerfile  worker.Dockerfile
infra/migrations/: alembic.ini  env.py
infra/migrations/versions/: 001_initial_schema.py
infra/postgres/: init.sql
results/eval-smoke/: metrics.json  per_question.jsonl
results/eval-suite/: h1_report.json  suite_summary.json
results/eval-suite/B2/: metrics.json  per_question.jsonl  taxonomy_breakdown.json
results/eval-suite/B3/: metrics.json  per_question.jsonl  taxonomy_breakdown.json
results/eval-suite/B4/: taxonomy_breakdown.json
scripts/: dev-up.sh  seed.sh  start-embedding-host.sh
