[project]
name = "dcode"
version = "0.0.0"
description = "Dcode monorepo root — see README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/worker",
    "apps/agent",
    "apps/eval",
    "packages/shared",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
dcode-shared = { workspace = true }
dcode-api = { workspace = true }
dcode-worker = { workspace = true }
dcode-agent = { workspace = true }
dcode-eval = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["apps", "packages"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line length is enforced by the formatter, not the linter
    "B008",  # FastAPI Depends() in default args is the standard idiom
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "N802"]
"**/migrations/**" = ["E501", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "jedi.*",
    "tree_sitter.*",
    "tree_sitter_python.*",
    "aio_pika.*",
    "langgraph.*",
    "alembic.*",
    "pgvector.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "packages/shared/src",
    "apps/api/src",
    "apps/worker/src",
    "apps/agent/src",
    "apps/eval/src",
]
testpaths = ["apps", "packages"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers"
