[project]
name = "dcode-agent"
version = "0.0.0"
description = "Dcode Agent Orchestrator — implements DESIGN.md §2.3"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "langgraph>=0.0.50",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "dcode-shared",
]

[tool.uv.sources]
dcode-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dcode_agent"]
