[project]
name = "dcode-api"
version = "0.0.0"
description = "Dcode API Gateway — implements DESIGN.md §4.1 / §4.3"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "aio-pika>=9.4.0",
    "alembic>=1.13.0",
    "dcode-shared",
]

[tool.uv.sources]
dcode-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dcode_api"]
