[project]
name = "dcode-eval"
version = "0.0.0"
description = "Dcode Evaluation Harness — implements DESIGN.md §2.4"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "dcode-shared",
]

[project.scripts]
dcode-eval = "dcode_eval.run:main"

[tool.uv.sources]
dcode-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dcode_eval"]
