[project]
name = "dcode-worker"
version = "0.0.0"
description = "Dcode index worker — implements DESIGN.md §2.1 Indexing Pipeline"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.4.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "jedi>=0.19.0",
    "redis>=5.0.0",
    "dcode-shared",
]

[tool.uv.sources]
dcode-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dcode_worker"]
